# prego

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  boostext.ut.6a4dedd.patch  prego-old.cpp  prego.cpp  prego.h  prego.test.cpp
.github/: cmake-multi-platform.yml
.github/workflows/: cmake-multi-platform.yml
examples/: sandbox.cpp
include/prego/: prego.h
tests/: basics.cpp  common.h  graph_traversal.cpp  insertion_order_containers.cpp  insertion_order_map.cpp  integration_tests.cpp  lifetimes.cpp  mutations.cpp  prego.test.cpp  syntaxes.cpp  transparent_syntax.cpp  types.cpp  utilities.cpp
